# ShredLink

./: .env.example  .gitignore  README.md
public/: app.js  i18n.js  index.html  unlock.html  unlock.js
server/: Cargo.toml
server/migrations/: 20250207000001_create_links.sql
server/src/: config.rs  crypto.rs  db.rs  handlers.rs  main.rs  middleware.rs  models.rs
