[package]
name = "shredlink-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
rand_core = "0.6"
nanoid = "0.4"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor = "0.6"
thiserror = "1"
anyhow = "1"
base64 = "0.21"
